--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
-*.csv filter=lfs diff=lfs merge=lfs -text
+F1_tweets.csv filter=lfs diff=lfs merge=lfs -text
+training.1600000.processed.noemoticon.csv filter=lfs diff=lfs merge=lfs -text
 *.gz filter=lfs diff=lfs merge=lfs -text
+preprocessed_F1_tweets.csv filter=lfs diff=lfs merge=lfs -text
+preprocessed_training.1600000.processed.noemoticon.csv filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
