--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ wordcloud==1.9.2
 polars[all]==0.19.8
 emoji==2.8.0
 pytest==7.4.2
+PyDrive==1.3.1
+gensim==4.3.2
+textblob==0.17.1
+tensorflow==2.14.0
